# telegramjob

./: .env.example  .gitignore  .pyspellcheck.cfg  DEVELOPMENT.md  GEMINI.md  LICENSE  Next-steps.md  README.md  config.py  crontab.example  logger_config.py  message_parser.py  playwrightpart.py  playwrightstuff.py  pyproject.toml  requirements.txt  telegramjob.py  telegramjob.sh  telegrampart.py  telegramstuff.py  test_telegram.py  youtube_api.py  youtubestuff.py  ytsubscribe.py
png/: crontab.example
